--- a/_posts/2017-11-03-pyglet.markdown
+++ b/_posts/2017-11-03-pyglet.markdown
@@ -16,7 +16,7 @@ description: Python library for OpenGL
 externalLink: false
 ---
 
-## Summary:
+## Summary
 
 如果你想在PC上写自己的小程序，那么cocos2d（基于pyglet的封装）应该就够用了。那么，我们先学习一下pyglet的使用，并熟悉一下小型游戏程序的开发过程。
 
