update profile pic

--- a/_posts/2017-12-08-protobuf1.markdown
+++ b/_posts/2017-12-08-protobuf1.markdown
@@ -5,7 +5,7 @@ date: 2017-12-08 16:00
 tag: 
 - protobuf
 star: true
-image: /assets/images/profile.jpg
+image: /assets/images/profile_2.jpg
 headerImage: true
 projects: false
 blog: true
