--- a/_posts/2017-11-03-pyglet.markdown
+++ b/_posts/2017-11-03-pyglet.markdown
@@ -6,7 +6,7 @@ tag:
 - pyglet
 - OpenGL
 star: true
-image: /assets/images/profile.jpg
+image: /assets/images/profile_2.jpg
 headerImage: true
 projects: false
 blog: true
